--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -50,3 +50,7 @@
 .spacer {
     margin-top: 15px;
 }
+
+button {
+	text-transform: uppercase;
+}
